

Changes Since 0.8.1
===================

* General:

  - reStructuredText "code" role and directive with syntax highlighting
    by Pygments_.
  - "code" option of the "include" directive.
  - Fix parse_option_marker for option arguments containing ``=``.

.. _Pygments: http://pygments.org/

* docutils/io.py

  - Fix [ 3395948 ] (Work around encoding problems in Py3k).

* docutils/utils.py

  - DependencyList uses io.FileOutput to prevent errors recording
    non-ASCII filenames (fixes [ 3434355 ].

* docutils/parsers/rst/states.py

  - Fix [ 3402314 ] allow non-ASCII whitespace, punctuation
    characters and "international" quotes around inline markup.

* docutils/parsers/rst/tableparser.py

  - Fix [ 2926161 ] for simple tables.
    (Combining chars in grid tables still contribute to cell width.)

* docutils/writers/latex2e/__init__.py

  - Support the `abbreviation` and `acronym` standard roles.

* docutils/writers/html4css1/__init__.py

  - change default for `math-output` setting to MathJax

Release 0.8.1 (2011-08-30)
==========================

* General:

  - Fix [ 3364658 ] (Change last file with Apache license to BSD-2-Clause)
    and [ 3395920 ] (correct copyright info for rst.el). 
  
* docutils/test/

  -  Apply [ 3303733 ] and [ 3365041 ] to fix tests under py3k. 

* docutils/writers/latex2e/__init__.py

  - Clean up Babel language setting. Restores Sphinx compatibility.

Release 0.8 (2011-07-07)
========================

* General:

  - Handle language codes according to `BCP 47`_.
  - If the specified language is not supported by Docutils,
    warn and fall back to English.
  - Math support: reStructuredText "math" role and directive,
    ``math`` and ``math_block`` doctree elements.
  - Decode command line arguments with the locale's preferred encoding
    (to allow, e.g., ``--title=Dornröschen``).
  - Orphaned "python" reader and "newlatex2e" writer moved to the sandbox.
  - New sub-module `error_reporting`: handle encoding/decoding errors